--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
-<div class="building">
-  <h1>Matrimonio di Sara & Davide</h1>
-  <h3>Sito in construzione</h3>
-  <h3>Data prevista di pubblicazione: 31 marzo 2023</h3>
+<div class="container">
+  <div class="__contents">
+    <app-header></app-header>
+    <app-program id="program"></app-program>
+    <app-present id="present"></app-present>
+  </div>
 </div>
-
