--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,41 +1,24 @@
-.building {
+.container {
   display: flex;
-  flex-direction: column;
   justify-content: center;
-  width: 100%;
-  height: 100%;
-  align-items: center;
-  white-space: normal;
-  text-align: center;
-  h1 {
-    font-size: 60px;
+  & .__contents {
+    width: 70%;
   }
-  h3{
-    font-size: 25px;
-    margin: 10px;
-  }
-  color: black;
-  text-shadow: 0 0 0.4em #545454;
 }
 
-.building:after{
-  content:'';
-  width:100%;
-  height:100%;
-  position:absolute;
-  top:0;
-  left:0;
-  background-image: url("../assets/images/sirmione-3.jpg");
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-  opacity: 0.7;
-  z-index: -1;
-  filter: brightness(70%);
+@media (max-width: 1100px) {
+  .container {
+    & .__contents {
+      width: 80%;
+    }
+  }
 }
 
-@media (max-width: 768px) {
-  .building:after {
-    background-position: left;
+
+@media (max-width: 900px) {
+  .container {
+    & .__contents {
+      width: 90%;
+    }
   }
 }
